<resources>
    <string name="app_name">PresensiKu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">Tentang aplikasi</string>
    <string name="about_activity_title">Tentang PresensiKu</string>
    <string name="made_by_about_activity">Made with soul and tears By Kelompok 12 Praktikum Pemrograman Mobile</string>
    <string name="presensi_name_form_hint">Nama Presensi</string>
    <string name="presensi_desc_form_hint">Deskripsi Presensi</string>
    <string name="presensi_date_open_form_hint">Tanggal presensi di buka</string>
    <string name="presensi_date_close_form_hint">Tanggal presensi di tutup</string>
    <string name="presensi_add_button_text">Tambahkan presensi</string>
    <string name="role_login_dropdown_mahasiswa">Mahasiswa</string>
    <string name="login_role_dropdown_dosen">Dosen</string>
    <string name="version_string">Versi %1$s</string>
    <string name="register_name_error">Nama tidak boleh kosong</string>
    <string name="register_name_error_length">Nama tidak boleh lebih dari 50 karakter</string>
    <string name="register_noinduk_error">Nomor induk tidak boleh kosong</string>
    <string name="register_noinduk_error_length">Nomor induk tidak boleh lebih dari 15 karakter</string>
    <string name="register_username_error">Username tidak boleh kosong</string>
    <string name="register_username_error_length">Username tidak boleh lebih dari 25 karakter</string>
    <string name="register_password_error">Password tidak boleh kosong</string>
    <string name="register_password_confirm_error">Silahkan konfirmasi password</string>
    <string name="register_password_confirm_not_match">Password tidak cocok</string>
    <string name="register_select_role_error">Silahkan pilih role</string>
    <string name="server_error">Server error atau cek kondisi internet anda</string>
</resources>